--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </style>
 <body>
     <article class="game">
+         <button>Veja nosso album</button>
         <h1 class="title">O básico</h1>
         <p class="texto">É uma franquia de jogos stealth (esquece o MGR) tendo como protagonista Solid Snake e/ou Big Boss, o Naked Snake.<br><br>
             O jogo, criado por Hideo Kojima, tem duas "séries" diferentes, porém, que seguem a mesma linha cronológica. 
