--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         E então voltamos ao passado com um renegado Big Boss e sua MSF (Militares Sans Frontières), com o apoio de Kazuhira Miller, obviamente. Tanto em MGS V: Ground Zeroes e MGS V: The Phantom Pain, Snake deve enfrentar a Cipher e o misterioso Skull Face.<br>
         No entanto, é em Ground Zeroes que Kaz Miller pronúncia as épicas frases: "They played like us damn fiddle!"
     </p>
+        No entanto, é em Ground Zeroes que Kaz Miller pronúncia a épica frase: "They played like us damn fiddle!"
         </p>
     </article>
 </body>
