--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1 class="title">O básico</h1>
         <p class="texto">
             
-            <img src="kojima.jpg">
+            <img src="ko.png"><br>
 
             É uma franquia de jogos stealth (esquece o MGR) tendo como protagonista Solid Snake e/ou Big Boss, o Naked Snake.<br><br>
             O jogo, criado por Hideo Kojima, tem duas "séries" diferentes, porém, que seguem a mesma linha cronológica. 
@@ -42,8 +42,6 @@
         Inclusive, é em MGS que descobrimos que Solid, Liquid e Solidus são clones de Big Boss. E é com esse gancho que vemos um jovem Big Boss (ainda chamado de Naked Snake) impedindo uma guerra nuclear entre ocidente e oriente, em MGS 3: Snake Eater. Tanto o Portable Ops quanto Peace Walker são sequências diretas de MGS 3, nos apresentando o grande Kazuhira Miller e a Mother Base.<br>
         Já em MGS 4: Guns of Patriots, voltamos a Solid Snake sofrendo de envelhecimento precoce causado pelo vírus Die Fox, com isso somos apresentados ao Old Snake, o mesmo Solid, porém mais velho e prestes a morrer, que deve enfrentar de uma vez por todas Liquid Ocelot, uma nova versão de Liquid Snake. E há também um reecontro bem tocante entre Old Snake e Big Boss.<br>
         E então voltamos ao passado com um renegado Big Boss e sua MSF (Militares Sans Frontières), com o apoio de Kazuhira Miller, obviamente. Tanto em MGS V: Ground Zeroes e MGS V: The Phantom Pain, Snake deve enfrentar a Cipher e o misterioso Skull Face.<br>
-        No entanto, é em Ground Zeroes que Kaz Miller pronúncia as épicas frases: "They played like us damn fiddle!"
-    </p>
         No entanto, é em Ground Zeroes que Kaz Miller pronúncia a épica frase: "They played like us damn fiddle!"
         </p>
     </article>
