--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <ol>Metal Gear Solid: Portable Ops (parte spin-off e parte considerada canônica)</ol>
             <ol>Metal Gear Solid 4: The Guns of Patriots</ol>
             <ol>Metal Gear Solid: Peace Walker (Inicialmente, exclusivo de PSP)</ol>
-            <ol>Metal Gear Solid 5: The Grounds Zeroes (Apenas o prologo de MGS 5: TPP</ol>
+            <ol>Metal Gear Solid 5: The Grounds Zeroes (Apenas o prologo de MGS 5: TPP)</ol>
             <ol>Metal Gear Solid 5: The Phantom Pain</ol>
         </p>
         <p class="texto">
